# newspaper-parsing

./: .gitignore  .gitmodules  Makefile  README.md  pull_newspaper.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: bagging.command.example.json  bagging.command.fixture.json  bagging.legacy-output.example.json  bagging.legacy.fixture.json  pipeline.example.json  pipeline.torch.json
docs/: newspaper_parsing_pipeline.tex  output_layout.md  parser_bagging_refactor.md  torch_hpc.md
docs/appendix_transcripts/: abilene_full_transcript.txt  bakersfield_full_transcript.txt
prompts/: ordinance_box_questionnaire_prompt_text.txt  zoning_ocr_classifier_prompt_text.txt
scripts/: analyze_questionnaire_pca_timeseries.py  bagging_fixture_adapter.py  build_legacy_bagging_config.py  cancel_openai_batches.py  check_public_safety.py  compute_questionnaire_pca.py  convert_gemini_batch_dir_to_openai.py  dedupe_layouts.py  download_gemini_batch_results.py  download_openai_batch_results.py  experiment_zoning_classifier_openai.py  export_batch_requests.py  export_local_batches.sh  export_ordinance_questionnaire_answers_to_excel.sh  export_ordinance_questionnaire_batch_requests.py  export_zoning_classifier_batch_requests.py  legacy_layout_to_model_output.py  make_layout_manifest.sh  make_manifest.py  make_ordinance_questionnaire_batches_openai.sh  make_zoning_classifier_batches_openai.sh  monitor_torch_jobs.sh  normalize_ordinance_questionnaire_openai_batch_results.py  push_gemini_key_to_greene.sh  push_openai_key_to_greene.sh  push_request_dir_to_greene.sh  refresh_ordinance_questionnaire_excel.sh  rehydrate_gemini_batch_results.py  rehydrate_openai_batch_results.py  report_openai_batch_status.py  run_local_page_qa.py  run_local_sync.py  run_local_zoning_classifier.py  run_local_zoning_gpt5nano.py  run_ordinance_questionnaire_openai_sync.py  run_ordinance_questionnaire_openai_sync.sh  run_page_qa.py  run_vlm_gateway.py  run_zoning_classifier.py  split_manifest.sh  (+8 more)
slurm/: convert_gemini_to_openai_dedup_100.sbatch  download_gemini_results_dedup_470.sbatch  download_openai_results_dedup_470.sbatch  export_batch_requests_dedup_100.sbatch  submit_gemini_batches_dedup_470.sbatch  submit_openai_batches_dedup_470.sbatch  submit_openai_zoning_boxes_array.sbatch  vlm_gemini25_array.sbatch
src/newsbag/: __init__.py  __main__.py  bagging.py  cli.py  config.py  contracts.py  fusion.py  labels.py  legacy.py  legacy_run.py  performance.py  (+5 more)
tests/: test_bagging.py  test_legacy_layout_adapter.py  test_legacy_run_config.py  test_performance.py  test_status.py  test_validation.py
(+26 files in other folders)
