[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newsbag"
version = "0.2.0"
description = "Manifest-driven newspaper layout, OCR model bagging, fusion, and transcript infrastructure"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Saul Richardson"}]
keywords = ["newspapers", "ocr", "document-layout", "hpc", "computer-vision"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.26",
  "Pillow>=10.0",
]

[project.optional-dependencies]
paddle = [
  "paddleocr>=3.4.0"
]
dell = [
  "onnxruntime-gpu>=1.20",
  "opencv-python-headless>=4.9",
  "torch>=2.2"
]
mineru = [
  "torch>=2.2",
  "transformers>=4.45",
  "accelerate>=0.34",
  # Not on PyPI as of Feb 2026; install from the upstream release tag.
  "mineru_vl_utils @ git+https://github.com/opendatalab/mineru-vl-utils.git@mineru_vl_utils-0.1.22-released"
]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "ruff>=0.12"
]

[project.urls]
Repository = "https://github.com/saulrichardson/newspaper-parsing"
Issues = "https://github.com/saulrichardson/newspaper-parsing/issues"

[project.scripts]
newsbag = "newsbag.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
